Add Canal CNI v3.22 support & make it the default CNI (#9258)
* Add Canal CNI v3.22 support & make it the default CNI

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

* Automatically upgrade Canal to v3.22 in clusters with k8s v1.23 and higher

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

* Update validation webhook test

Signed-off-by: Rastislav Szabo <rastislav@kubermatic.com>

--- a/addons/canal/canal_v3.19.yaml
+++ b/addons/canal/canal_v3.19.yaml
@@ -17,7 +17,7 @@
 #   - Remove the flexvolume installation as its broken for Flatcar Linux & only required for application policies (Which we don't use).
 #   - Add envoyagent interface to the exclusion list for Calico IP autodetection.
 #   - Add custom network policy
-#   - Canal image bumped to v0.15.1
+#   - Flannel image bumped to v0.15.1
 
 {{ if eq .Cluster.CNIPlugin.Type "canal" }}
 {{ if eq .Cluster.CNIPlugin.Version "v3.19" }}
