--- a/addons/canal/canal_v3.22.yaml
+++ b/addons/canal/canal_v3.22.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Source: https://docs.projectcalico.org/v3.21/manifests/canal.yaml
+# Source: https://projectcalico.docs.tigera.io/v3.22/manifests/canal.yaml
 # Modifications:
 #   - templated net-conf.json Network & CALICO_IPV4POOL_CIDR
 #   - CALICO_IPV4POOL_NAT_OUTGOING set to false (this NAT is already performed by flannel)
@@ -25,7 +25,7 @@
 #   - Flannel image bumped to v0.15.1
 
 {{ if eq .Cluster.CNIPlugin.Type "canal" }}
-{{ if eq .Cluster.CNIPlugin.Version "v3.21" }}
+{{ if eq .Cluster.CNIPlugin.Version "v3.22" }}
 
 ---
 # Source: calico/templates/calico-config.yaml
@@ -2580,8 +2580,8 @@ spec:
                   from this pool.
                 type: boolean
               disableBGPExport:
-                description: 'Disable exporting routes from this IP Pool’s CIDR over
-                  BGP. [Default: false]'
+                description: "Disable exporting routes from this IP Pool's CIDR over
+                  BGP. [Default: false]"
                 type: boolean
               ipip:
                 description: 'Deprecated: this field is only used for APIv1 backwards
@@ -4136,7 +4136,7 @@ spec:
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: '{{ Registry "docker.io" }}/calico/cni:v3.21.2'
+          image: '{{ Registry "docker.io" }}/calico/cni:v3.22.1'
           command: ["/opt/cni/bin/install"]
           envFrom:
           - configMapRef:
@@ -4179,7 +4179,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: '{{ Registry "docker.io" }}/calico/node:v3.21.2'
+          image: '{{ Registry "docker.io" }}/calico/node:v3.22.1'
           envFrom:
           - configMapRef:
               # Allow KUBERNETES_SERVICE_HOST and KUBERNETES_SERVICE_PORT to be overridden for eBPF mode.
@@ -4410,7 +4410,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: calico-kube-controllers
-          image: '{{ Registry "docker.io" }}/calico/kube-controllers:v3.21.2'
+          image: '{{ Registry "docker.io" }}/calico/kube-controllers:v3.22.1'
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
