application: donwload sources in an emptyDir
the size of the empty dir can be set through Cluster.spec.applicationSettings.CacheSize. The default size is 300Mi.

To choose this default value, we looks a the size of 3 repositories:
* https://github.com/bitnami/charts: set of ~100 charts provided by bitnami
* https://github.com/prometheus-community/helm-charts: contains the different charts for deploying prometheus stack
* https://github.com/kubermatic/kubermatic

These repositories has been choosen because, the first 2 serve only charts and the last one serve charts and code (with history).

repository              size with clone commit          size with clone tag
bitnami                 199m                            38m
prometheus              87m                             6,7m
kubermatic              191m                            50m

So with a 300Mi cache should be more than enough to donwload source from a big repo and handle dependencies

Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -62,6 +62,19 @@ spec:
                 items:
                   type: string
                 type: array
+              applicationSettings:
+                description: 'Optional: ApplicationSettings contains the settings
+                  relative to the application feature.'
+                properties:
+                  cacheSize:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    description: CacheSize is the size of the cache used to download
+                      application's sources.
+                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                    x-kubernetes-int-or-string: true
+                type: object
               auditLogging:
                 description: 'Optional: AuditLogging configures Kubernetes API audit
                   logging (https://kubernetes.io/docs/tasks/debug-application-cluster/audit/)
