--- a/pkg/resources/test/fixtures/deployment-bringyourown-1.24.0-usercluster-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-bringyourown-1.24.0-usercluster-controller.yaml
@@ -40,7 +40,7 @@ spec:
         - -timeout
         - "1"
         - -command
-        - '{"command":"/usr/local/bin/user-cluster-controller-manager","args":["-kubeconfig","/etc/kubernetes/kubeconfig/kubeconfig","-metrics-listen-address","0.0.0.0:8085","-health-listen-address","0.0.0.0:8086","-namespace","$(NAMESPACE)","-cluster-url","https://jh8j81chn.europe-west3-c.dev.kubermatic.io:30000","-cluster-name","de-test-01","-dns-cluster-ip","10.240.16.10","-overwrite-registry","","-version","1.24.0","-enable-ssh-key-agent=true","-opa-integration=false","-ca-bundle=/opt/ca-bundle/ca-bundle.pem","-node-local-dns-cache=true","--ipam-controller-network","192.168.1.1/24,192.168.1.1,8.8.8.8","-openvpn-server-port","30003","-cloud-provider-name","bringyourown","-user-cluster-monitoring=true","-user-cluster-logging=false","-mla-gateway-url","https://jh8j81chn.europe-west3-c.dev.kubermatic.io:30005","-node-labels","{\"my-label\":\"my-value\"}"]}'
+        - '{"command":"/usr/local/bin/user-cluster-controller-manager","args":["-kubeconfig","/etc/kubernetes/kubeconfig/kubeconfig","-metrics-listen-address","0.0.0.0:8085","-health-listen-address","0.0.0.0:8086","-namespace","$(NAMESPACE)","-cluster-url","https://jh8j81chn.europe-west3-c.dev.kubermatic.io:30000","-cluster-name","de-test-01","-dns-cluster-ip","10.240.16.10","-overwrite-registry","","-version","1.24.0","-application-cache","/applications-cache","-enable-ssh-key-agent=true","-opa-integration=false","-ca-bundle=/opt/ca-bundle/ca-bundle.pem","-node-local-dns-cache=true","--ipam-controller-network","192.168.1.1/24,192.168.1.1,8.8.8.8","-openvpn-server-port","30003","-cloud-provider-name","bringyourown","-user-cluster-monitoring=true","-user-cluster-logging=false","-mla-gateway-url","https://jh8j81chn.europe-west3-c.dev.kubermatic.io:30005","-node-labels","{\"my-label\":\"my-value\"}"]}'
         command:
         - /http-prober-bin/http-prober
         env:
@@ -74,6 +74,8 @@ spec:
         - mountPath: /opt/ca-bundle/
           name: ca-bundle
           readOnly: true
+        - mountPath: /applications-cache
+          name: applications-cache
         - mountPath: /http-prober-bin
           name: http-prober-bin
       imagePullSecrets:
@@ -97,6 +99,9 @@ spec:
       - configMap:
           name: ca-bundle
         name: ca-bundle
+      - emptyDir:
+          sizeLimit: 300Mi
+        name: applications-cache
       - emptyDir: {}
         name: http-prober-bin
 status: {}
