Test new build image
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -156,7 +156,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-7
+        - image: quay.io/embik/kubermatic-build:go-1.18-node-16-kind-0.14-8
           env:
             - name: KUBERMATIC_EDITION
               value: ee
