--- a/.prow/tests.yaml
+++ b/.prow/tests.yaml
@@ -21,7 +21,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: quay.io/embik/kubermatic-build:go-1.18-node-16-8
+        - image: quay.io/kubermatic/build:go-1.18-node-16-8
           command:
             - make
           args:
