remove the osm image repo and version from cli args and use kubermatic configurations directly
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -519,15 +519,15 @@ spec:
                       imageRepository:
                         description: ImageRepository is used to override the OperatingSystemManager
                           image repository. It is recommended to use this field only
-                          for development, tests and PoC purposes.For production environments.
-                          it is not recommended, to use this field due to compatibility
-                          with the overall KKP stack.
+                          for development, tests and PoC purposes. For production
+                          environments. it is not recommended, to use this field due
+                          to compatibility with the overall KKP stack.
                         type: string
                       imageTag:
                         description: ImageTag is used to override the OperatingSystemManager
                           image. It is recommended to use this field only for development,
-                          tests and PoC purposes.For production environments. it is
-                          not recommended, to use this field due to compatibility
+                          tests and PoC purposes. For production environments. it
+                          is not recommended, to use this field due to compatibility
                           with the overall KKP stack.
                         type: string
                     type: object
