use the new web-terminal Docker image (#10120)
* use the new web-terminal Docker image

* update fixtures

--- a/pkg/resources/test/fixtures/deployment-aws-1.21.0-web-terminal.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.21.0-web-terminal.yaml
@@ -32,7 +32,7 @@ spec:
           value: /etc/kubernetes/kubeconfig/kubeconfig
         - name: PS1
           value: '\$ '
-        image: quay.io/kubermatic/util:2.1.0
+        image: quay.io/kubermatic/web-terminal:0.2.0
         name: web-terminal
         resources:
           limits:
