--- a/.prow/features.yaml
+++ b/.prow/features.yaml
@@ -288,7 +288,7 @@ presubmits:
               memory: 6Gi
 
   - name: pre-kubermatic-ipam-e2e
-    run_if_changed: "(go.mod|go.sum|pkg/|.prow/)"
+    run_if_changed: "pkg/controller/seed-controller-manager/ipam/"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
