--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -111,6 +111,61 @@ spec:
                     - recommended
                     - minimal
                     type: string
+                  sidecar:
+                    description: 'Optional: Configures the fluent-bit sidecar deployed
+                      alongside kube-apiserver.'
+                    properties:
+                      config:
+                        description: AuditSidecarConfiguration defines custom configuration
+                          for the fluent-bit sidecar deployed with a kube-apiserver.
+                          Also see https://docs.fluentbit.io/manual/v/1.8/administration/configuring-fluent-bit/configuration-file.
+                        properties:
+                          filters:
+                            items:
+                              additionalProperties:
+                                type: string
+                              type: object
+                            type: array
+                          outputs:
+                            items:
+                              additionalProperties:
+                                type: string
+                              type: object
+                            type: array
+                          service:
+                            additionalProperties:
+                              type: string
+                            type: object
+                        type: object
+                      resources:
+                        description: ResourceRequirements describes the compute resource
+                          requirements.
+                        properties:
+                          limits:
+                            additionalProperties:
+                              anyOf:
+                              - type: integer
+                              - type: string
+                              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                              x-kubernetes-int-or-string: true
+                            description: 'Limits describes the maximum amount of compute
+                              resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                            type: object
+                          requests:
+                            additionalProperties:
+                              anyOf:
+                              - type: integer
+                              - type: string
+                              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                              x-kubernetes-int-or-string: true
+                            description: 'Requests describes the minimum amount of
+                              compute resources required. If Requests is omitted for
+                              a container, it defaults to Limits if that is explicitly
+                              specified, otherwise to an implementation-defined value.
+                              More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                            type: object
+                        type: object
+                    type: object
                 type: object
               cloud:
                 description: CloudSpec stores configuration options for a given cloud
