--- a/hack/ci/testdata/kubermatic_cilium.yaml
+++ b/hack/ci/testdata/kubermatic_cilium.yaml
@@ -105,6 +105,7 @@ spec:
     # at least ensure we deploy a working set of Deployments.
     VerticalPodAutoscaler: false
     KonnectivityService: true
+    HeadlessInstallation: true
   ui:
     replicas: 0
   # Dex integration
