--- a/.prow/features.yaml
+++ b/.prow/features.yaml
@@ -125,7 +125,7 @@ presubmits:
             limits:
               memory: 6Gi
 
-  - name: pre-kubermatic-dualstack-e2e
+  - name: pre-kubermatic-dualstack-e2e-cilium
     optional: true
     # run_if_changed: ".*(cilium|canal|dualstack|api|addon|defaults|cni|validation|operator|provider|machine|webhook|crd|.prow|go.mod|proxy|network).*"
     decorate: true
@@ -145,6 +145,8 @@ presubmits:
           command:
             - "./hack/ci/run-dualstack-e2e-test.sh"
           env:
+            - name: CNI
+              value: cilium
             - name: VERSION_TO_TEST
               value: v1.23.8
             - name: KUBERMATIC_EDITION
@@ -162,6 +164,47 @@ presubmits:
               cpu: 2
             limits:
               memory: 6Gi
+
+  - name: pre-kubermatic-dualstack-e2e-canal
+    optional: true
+    # run_if_changed: ".*(cilium|canal|dualstack|api|addon|defaults|cni|validation|operator|provider|machine|webhook|crd|.prow|go.mod|proxy|network).*"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-aws: "true"
+      preset-kubeconfig-ci: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-kind-volume-mounts: "true"
+      preset-vault: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
+          imagePullPolicy: Always
+          command:
+            - "./hack/ci/run-dualstack-e2e-test.sh"
+          env:
+            - name: CNI
+              value: canal
+            - name: VERSION_TO_TEST
+              value: v1.23.8
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
+
 
   - name: pre-kubermatic-etcd-launcher-e2e
     run_if_changed: "(cmd/etcd-launcher/|pkg/|.prow/)"
