Fix printer columns
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_groupprojectbindings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_groupprojectbindings.yaml
@@ -16,11 +16,11 @@ spec:
   scope: Cluster
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .spec.projectID
+      name: ProjectID
+      type: string
     - jsonPath: .spec.group
       name: Group
-      type: string
-    - jsonPath: .spec.project
-      name: Project
       type: string
     - jsonPath: .spec.role
       name: Role
