--- a/charts/backup/velero/crd/backupstoragelocations.yaml
+++ b/charts/backup/velero/crd/backupstoragelocations.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.8.1. Do not edit.
+# This file has been generated with Velero v1.9.0. Do not edit.
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -132,6 +132,9 @@ spec:
                   format: date-time
                   nullable: true
                   type: string
+                message:
+                  description: Message is a message about the backup storage location's status.
+                  type: string
                 phase:
                   description: Phase is the current state of the BackupStorageLocation.
                   enum:
@@ -142,5 +145,4 @@ spec:
           type: object
       served: true
       storage: true
-      subresources:
-        status: {}
+      subresources: {}
