--- a/charts/backup/velero/crd/deletebackuprequests.yaml
+++ b/charts/backup/velero/crd/deletebackuprequests.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.8.1. Do not edit.
+# This file has been generated with Velero v1.9.0. Do not edit.
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -16,7 +16,16 @@ spec:
     singular: deletebackuprequest
   scope: Namespaced
   versions:
-    - name: v1
+    - additionalPrinterColumns:
+        - description: The name of the backup to be deleted
+          jsonPath: .spec.backupName
+          name: BackupName
+          type: string
+        - description: The status of the deletion request
+          jsonPath: .status.phase
+          name: Status
+          type: string
+      name: v1
       schema:
         openAPIV3Schema:
           description: DeleteBackupRequest is a request to delete one or more backups.
@@ -57,3 +66,4 @@ spec:
           type: object
       served: true
       storage: true
+      subresources: {}
