--- a/charts/backup/velero/crd/resticrepositories.yaml
+++ b/charts/backup/velero/crd/resticrepositories.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.8.1. Do not edit.
+# This file has been generated with Velero v1.9.0. Do not edit.
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -16,7 +16,11 @@ spec:
     singular: resticrepository
   scope: Namespaced
   versions:
-    - name: v1
+    - additionalPrinterColumns:
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
       schema:
         openAPIV3Schema:
           properties:
@@ -71,3 +75,4 @@ spec:
           type: object
       served: true
       storage: true
+      subresources: {}
