--- a/charts/backup/velero/crd/restores.yaml
+++ b/charts/backup/velero/crd/restores.yaml
@@ -1,4 +1,4 @@
-# This file has been generated with Velero v1.8.1. Do not edit.
+# This file has been generated with Velero v1.9.0. Do not edit.
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -47,6 +47,10 @@ spec:
                     type: string
                   nullable: true
                   type: array
+                existingResourcePolicy:
+                  description: ExistingResourcePolicy specifies the restore behaviour for the kubernetes resource to be restored
+                  nullable: true
+                  type: string
                 hooks:
                   description: Hooks represent custom behaviors that should be executed during or post restore.
                   properties:
@@ -952,6 +956,40 @@ spec:
                     type: string
                   description: NamespaceMapping is a map of source namespace names to target namespace names to restore into. Any source namespaces not included in the map will be restored into namespaces of the same name.
                   type: object
+                orLabelSelectors:
+                  description: OrLabelSelectors is list of metav1.LabelSelector to filter with when restoring individual objects from the backup. If multiple provided they will be joined by the OR operator. LabelSelector as well as OrLabelSelectors cannot co-exist in restore request, only one of them can be used
+                  items:
+                    description: A label selector is a label query over a set of resources. The result of matchLabels and matchExpressions are ANDed. An empty label selector matches all objects. A null label selector matches no objects.
+                    properties:
+                      matchExpressions:
+                        description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
+                        items:
+                          description: A label selector requirement is a selector that contains values, a key, and an operator that relates the key and values.
+                          properties:
+                            key:
+                              description: key is the label key that the selector applies to.
+                              type: string
+                            operator:
+                              description: operator represents a key's relationship to a set of values. Valid operators are In, NotIn, Exists and DoesNotExist.
+                              type: string
+                            values:
+                              description: values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty. This array is replaced during a strategic merge patch.
+                              items:
+                                type: string
+                              type: array
+                          required:
+                            - key
+                            - operator
+                          type: object
+                        type: array
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
+                        type: object
+                    type: object
+                  nullable: true
+                  type: array
                 preserveNodePorts:
                   description: PreserveNodePorts specifies whether to restore old nodePorts from backup.
                   nullable: true
@@ -960,6 +998,23 @@ spec:
                   description: RestorePVs specifies whether to restore all included PVs from snapshot (via the cloudprovider).
                   nullable: true
                   type: boolean
+                restoreStatus:
+                  description: RestoreStatus specifies which resources we should restore the status field. If nil, no objects are included. Optional.
+                  nullable: true
+                  properties:
+                    excludedResources:
+                      description: ExcludedResources specifies the resources to which will not restore the status.
+                      items:
+                        type: string
+                      nullable: true
+                      type: array
+                    includedResources:
+                      description: IncludedResources specifies the resources to which will restore the status. If empty, it applies to all resources.
+                      items:
+                        type: string
+                      nullable: true
+                      type: array
+                  type: object
                 scheduleName:
                   description: ScheduleName is the unique name of the Velero schedule to restore from. If specified, and BackupName is empty, Velero will restore from the most recent successful backup created from this schedule.
                   type: string
