remove todos and mocked resource quota webhook code (#10202)
* remove todos and enable resource quota webhook to get its resource quota

* fix lint and fixtures

* update fixtures project name

* add project kind label req

* use constant for ProjectSubjectKind

* rename

--- a/pkg/resources/test/fixtures/deployment-aws-1.22.1-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.22.1-usercluster-webhook.yaml
@@ -27,6 +27,7 @@ spec:
         - -webhook-cert-name=serving.crt
         - -webhook-key-name=serving.key
         - -ca-bundle=/opt/ca-bundle/ca-bundle.pem
+        - -project-id=my-project
         - -v=2
         command:
         - user-cluster-webhook
