--- a/pkg/resources/test/fixtures/etcdbackupconfig-azure-1.23.5-.yaml
+++ b/pkg/resources/test/fixtures/etcdbackupconfig-azure-1.23.5-.yaml
@@ -3,7 +3,7 @@
 metadata:
   creationTimestamp: null
   labels:
-    project-id: ""
+    project-id: my-project
 spec:
   cluster:
     apiVersion: kubermatic.k8c.io/v1
