Include OSM and kubernetes-dashboard in health status
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -2428,6 +2428,12 @@ spec:
                     - HealthStatusUp
                     - HealthStatusProvisioning
                     type: string
+                  kubernetesDashboard:
+                    enum:
+                    - HealthStatusDown
+                    - HealthStatusUp
+                    - HealthStatusProvisioning
+                    type: string
                   logging:
                     enum:
                     - HealthStatusDown
@@ -2453,6 +2459,12 @@ spec:
                     - HealthStatusProvisioning
                     type: string
                   openvpn:
+                    enum:
+                    - HealthStatusDown
+                    - HealthStatusUp
+                    - HealthStatusProvisioning
+                    type: string
+                  operatingSystemManager:
                     enum:
                     - HealthStatusDown
                     - HealthStatusUp
