--- a/pkg/resources/test/fixtures/deployment-aws-1.22.1-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.22.1-usercluster-webhook.yaml
@@ -31,6 +31,15 @@ spec:
         - -v=2
         command:
         - user-cluster-webhook
+        env:
+        - name: AWS_ACCESS_KEY_ID
+          value: aws-access-key-id
+        - name: AWS_SECRET_ACCESS_KEY
+          value: aws-secret-access-key
+        - name: AWS_ASSUME_ROLE_ARN
+          value: aws-assume-role-arn
+        - name: AWS_ASSUME_ROLE_EXTERNAL_ID
+          value: aws-assume-role-external-id
         image: quay.io/kubermatic/kubermatic:v0.0.0-test
         name: usercluster-controller
         ports:
