--- a/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-usercluster-webhook.yaml
@@ -31,6 +31,9 @@ spec:
         - -v=2
         command:
         - user-cluster-webhook
+        env:
+        - name: DO_TOKEN
+          value: do-token
         image: quay.io/kubermatic/kubermatic:v0.0.0-test
         name: usercluster-controller
         ports:
