--- a/pkg/resources/test/fixtures/deployment-openstack-1.24.0-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.24.0-usercluster-webhook.yaml
@@ -31,6 +31,21 @@ spec:
         - -v=2
         command:
         - user-cluster-webhook
+        env:
+        - name: OS_AUTH_URL
+          value: https://example.com:8000/v3
+        - name: OS_USER_NAME
+          value: openstack-username
+        - name: OS_PASSWORD
+          value: openstack-password
+        - name: OS_DOMAIN_NAME
+          value: openstack-domain
+        - name: OS_PROJECT_NAME
+          value: openstack-project
+        - name: OS_PROJECT_ID
+        - name: OS_APPLICATION_CREDENTIAL_ID
+        - name: OS_APPLICATION_CREDENTIAL_SECRET
+        - name: OS_TOKEN
         image: quay.io/kubermatic/kubermatic:v0.0.0-test
         name: usercluster-controller
         ports:
