--- a/pkg/resources/test/fixtures/deployment-vsphere-1.24.0-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-vsphere-1.24.0-usercluster-webhook.yaml
@@ -31,6 +31,13 @@ spec:
         - -v=2
         command:
         - user-cluster-webhook
+        env:
+        - name: VSPHERE_ADDRESS
+          value: https://vs-endpoint.io
+        - name: VSPHERE_USERNAME
+          value: vs-username
+        - name: VSPHERE_PASSWORD
+          value: vs-password
         image: quay.io/kubermatic/kubermatic:v0.0.0-test
         name: usercluster-controller
         ports:
