--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: applicationinstallations.apps.kubermatic.k8c.io
 spec:
@@ -198,6 +198,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   sshKey:
                                     description: SSHKey holds the ref and key in the
                                       secret for the SshKey credential. Secret must
@@ -220,6 +221,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   token:
                                     description: Token holds the ref and key in the
                                       secret for the token credential. Secret must
@@ -242,6 +244,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   username:
                                     description: Username holds the ref and key in
                                       the secret for the username credential. Secret
@@ -264,6 +267,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                 required:
                                 - method
                                 type: object
@@ -336,6 +340,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   username:
                                     description: Username holds the ref and key in
                                       the secret for the username credential. Secret
@@ -358,6 +363,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                 required:
                                 - password
                                 - username
