--- a/pkg/crd/k8c.io/kubermatic.k8c.io_alertmanagers.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_alertmanagers.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: alertmanagers.kubermatic.k8c.io
 spec:
@@ -47,6 +47,7 @@ spec:
                       TODO: Add other useful fields. apiVersion, kind, uid?'
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
             required:
             - configSecret
             type: object
