--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: clusters.kubermatic.k8c.io
 spec:
@@ -218,6 +218,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                     type: object
                   anexia:
                     description: AnexiaCloudSpec specifies the access data to Anexia.
@@ -262,6 +263,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       token:
                         type: string
                     type: object
@@ -315,6 +317,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       instanceProfileName:
                         type: string
                       nodePortsAllowedIPRange:
@@ -423,6 +426,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       loadBalancerSKU:
                         description: Azure SKU for Load Balancers. Possible values
                           are `basic` and `standard`.
@@ -566,6 +570,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       token:
                         type: string
                     type: object
@@ -618,6 +623,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       network:
                         type: string
                       nodePortsAllowedIPRange:
@@ -691,6 +697,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       network:
                         description: Network is the pre-existing Hetzner network in
                           which the machines are running. While machines can be in
@@ -746,6 +753,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       csiKubeconfig:
                         type: string
                       infraStorageClasses:
@@ -827,6 +835,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       csi:
                         description: NutanixCSIConfig for csi driver that connects
                           to a prism element
@@ -919,6 +928,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       domain:
                         type: string
                       floatingIPPool:
@@ -1051,6 +1061,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       projectID:
                         type: string
                     required:
@@ -1105,6 +1116,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       csi:
                         description: Config for CSI driver
                         properties:
@@ -1188,6 +1200,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       datastore:
                         description: Datastore to be used for storing virtual machines
                           and as a default for dynamic volume provisioning, it is
@@ -1912,6 +1925,7 @@ spec:
                               required:
                               - key
                               type: object
+                              x-kubernetes-map-type: atomic
                             value:
                               description: Value contains a 32-byte random key that
                                 is base64 encoded. This is the key used for encryption.
@@ -2034,6 +2048,7 @@ spec:
                       name must be unique.
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
               kubernetesDashboard:
                 description: KubernetesDashboard holds the configuration for the kubernetes-dashboard
                   component.
