--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: clustertemplates.kubermatic.k8c.io
 spec:
@@ -186,6 +186,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                     type: object
                   anexia:
                     description: AnexiaCloudSpec specifies the access data to Anexia.
@@ -230,6 +231,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       token:
                         type: string
                     type: object
@@ -283,6 +285,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       instanceProfileName:
                         type: string
                       nodePortsAllowedIPRange:
@@ -391,6 +394,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       loadBalancerSKU:
                         description: Azure SKU for Load Balancers. Possible values
                           are `basic` and `standard`.
@@ -534,6 +538,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       token:
                         type: string
                     type: object
@@ -586,6 +591,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       network:
                         type: string
                       nodePortsAllowedIPRange:
@@ -659,6 +665,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       network:
                         description: Network is the pre-existing Hetzner network in
                           which the machines are running. While machines can be in
@@ -714,6 +721,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       csiKubeconfig:
                         type: string
                       infraStorageClasses:
@@ -795,6 +803,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       csi:
                         description: NutanixCSIConfig for csi driver that connects
                           to a prism element
@@ -887,6 +896,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       domain:
                         type: string
                       floatingIPPool:
@@ -1019,6 +1029,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       projectID:
                         type: string
                     required:
@@ -1073,6 +1084,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       csi:
                         description: Config for CSI driver
                         properties:
@@ -1156,6 +1168,7 @@ spec:
                             description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       datastore:
                         description: Datastore to be used for storing virtual machines
                           and as a default for dynamic volume provisioning, it is
@@ -1880,6 +1893,7 @@ spec:
                               required:
                               - key
                               type: object
+                              x-kubernetes-map-type: atomic
                             value:
                               description: Value contains a 32-byte random key that
                                 is base64 encoded. This is the key used for encryption.
@@ -2002,6 +2016,7 @@ spec:
                       name must be unique.
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
               kubernetesDashboard:
                 description: KubernetesDashboard holds the configuration for the kubernetes-dashboard
                   component.
