--- a/pkg/crd/k8c.io/kubermatic.k8c.io_etcdbackupconfigs.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_etcdbackupconfigs.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: etcdbackupconfigs.kubermatic.k8c.io
 spec:
@@ -76,6 +76,7 @@ spec:
                     description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
               destination:
                 description: Destination indicates where the backup will be stored.
                   The destination name must correspond to a destination in the cluster's
