--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: kubermaticconfigurations.kubermatic.k8c.io
 spec:
@@ -140,6 +140,7 @@ spec:
                 - kind
                 - name
                 type: object
+                x-kubernetes-map-type: atomic
               exposeStrategy:
                 description: 'ExposeStrategy is the strategy to expose the cluster
                   with. Note: The `seed_dns_overwrite` setting of a Seed''s datacenter
@@ -187,6 +188,7 @@ spec:
                     - kind
                     - name
                     type: object
+                    x-kubernetes-map-type: atomic
                   className:
                     description: ClassName is the Ingress resource's class name, used
                       for selecting the appropriate ingress controller.
