--- a/pkg/crd/k8c.io/kubermatic.k8c.io_rulegroups.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_rulegroups.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: rulegroups.kubermatic.k8c.io
 spec:
@@ -74,6 +74,7 @@ spec:
                     description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
               data:
                 description: 'Data contains the RuleGroup data. Ref: https://prometheus.io/docs/prometheus/latest/configuration/recording_rules/#rule_group'
                 format: byte
