--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: seeds.kubermatic.k8c.io
 spec:
@@ -1061,6 +1061,7 @@ spec:
                                 the secret name must be unique.
                               type: string
                           type: object
+                          x-kubernetes-map-type: atomic
                         endpoint:
                           description: Endpoint is the API endpoint to use for backup
                             and restore.
@@ -1123,6 +1124,7 @@ spec:
                     description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
               location:
                 description: 'Optional: Detailed location of the cluster, like "Hamburg"
                   or "Datacenter 7". For informational purposes in the Kubermatic
