--- a/charts/kubermatic-operator/crd/k8c.io/operatingsystemmanager.k8c.io_operatingsystemprofile.yaml
+++ b/charts/kubermatic-operator/crd/k8c.io/operatingsystemmanager.k8c.io_operatingsystemprofile.yaml
@@ -41,10 +41,10 @@ spec:
             - spec
           properties:
             apiVersion:
-              description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources"
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
               type: string
             kind:
-              description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
               type: string
             metadata:
               type: object
@@ -110,8 +110,18 @@ spec:
                       type: array
                       items:
                         type: string
+                    yum_repo_dir:
+                      description: 'YumRepoDir the repo parts directory where individual yum repo config files will be written. Default: /etc/yum.repos.d'
+                      type: string
+                    yum_repos:
+                      description: YumRepos adds yum repository configuration to the system.
+                      type: object
+                      additionalProperties:
+                        type: object
+                        additionalProperties:
+                          type: string
                 osName:
-                  description: "OSType represent the operating system name e.g: ubuntu"
+                  description: 'OSType represent the operating system name e.g: ubuntu'
                   type: string
                   enum:
                     - flatcar
@@ -120,6 +130,7 @@ spec:
                     - ubuntu
                     - sles
                     - amzn2
+                    - rockylinux
                 osVersion:
                   description: OSVersion the version of the operating system
                   type: string
@@ -143,6 +154,7 @@ spec:
                           - hetzner
                           - kubevirt
                           - linode
+                          - nutanix
                           - openstack
                           - equinixmetal
                           - vsphere
@@ -152,6 +164,7 @@ spec:
                           - scaleway
                           - baremetal
                           - external
+                          - vmware-cloud-director
                       spec:
                         description: Spec represents the os/image reference in the supported cloud provider
                         type: object
