Add cluster specific API endpoints for VMware Cloud Director (#10268)
* Add cluster specific API endpoints for VMware Cloud Director

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Fix cleanup for vApp

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Update swagger and generated api-client

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactor code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1132,7 +1132,7 @@ spec:
                         - storageProfile
                         type: object
                       organization:
-                        description: Password is the VMware Cloud Director user password.
+                        description: Organization is the name of organization to use.
                         type: string
                       ovdcNetwork:
                         description: Network is the name of organizational virtual
