--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1100,7 +1100,7 @@ spec:
                         - storageProfile
                         type: object
                       organization:
-                        description: Password is the VMware Cloud Director user password.
+                        description: Organization is the name of organization to use.
                         type: string
                       ovdcNetwork:
                         description: Network is the name of organizational virtual
