--- a/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-usercluster-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-usercluster-controller.yaml
@@ -44,6 +44,8 @@ spec:
         command:
         - /http-prober-bin/http-prober
         env:
+        - name: DO_TOKEN
+          value: do-token
         - name: NAMESPACE
           valueFrom:
             fieldRef:
