--- a/pkg/resources/test/fixtures/deployment-aws-1.24.0-usercluster-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.24.0-usercluster-controller.yaml
@@ -44,6 +44,14 @@ spec:
         command:
         - /http-prober-bin/http-prober
         env:
+        - name: AWS_ACCESS_KEY_ID
+          value: aws-access-key-id
+        - name: AWS_SECRET_ACCESS_KEY
+          value: aws-secret-access-key
+        - name: AWS_ASSUME_ROLE_ARN
+          value: aws-assume-role-arn
+        - name: AWS_ASSUME_ROLE_EXTERNAL_ID
+          value: aws-assume-role-external-id
         - name: NAMESPACE
           valueFrom:
             fieldRef:
