--- a/pkg/resources/test/fixtures/deployment-openstack-1.23.5-usercluster-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.23.5-usercluster-controller.yaml
@@ -44,6 +44,20 @@ spec:
         command:
         - /http-prober-bin/http-prober
         env:
+        - name: OS_AUTH_URL
+          value: https://example.com:8000/v3
+        - name: OS_USER_NAME
+          value: openstack-username
+        - name: OS_PASSWORD
+          value: openstack-password
+        - name: OS_DOMAIN_NAME
+          value: openstack-domain
+        - name: OS_PROJECT_NAME
+          value: openstack-project
+        - name: OS_PROJECT_ID
+        - name: OS_APPLICATION_CREDENTIAL_ID
+        - name: OS_APPLICATION_CREDENTIAL_SECRET
+        - name: OS_TOKEN
         - name: NAMESPACE
           valueFrom:
             fieldRef:
